--- a/package.json
+++ b/package.json
@@ -13,16 +13,20 @@
     "extends": "react-app"
   },
   "dependencies": {
+    "@emotion/core": "10.0.27",
+    "@emotion/styled": "10.0.27",
+    "emotion": "10.0.27",
+    "emotion-server": "10.0.27",
     "next": "9.3.6",
+    "prismic-dom": "^2.2.3",
     "prismic-javascript": "^2.7.1",
     "prismic-reactjs": "^1.3.1",
     "prop-types": "^15.7.2",
     "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "styled-components": "^5.0.1"
+    "react-dom": "16.13.1"
   },
   "devDependencies": {
-    "babel-plugin-styled-components": "^1.10.7",
+    "babel-plugin-emotion": "^10.0.33",
     "eslint": "^6.8.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
