--- a/.gitignore
+++ b/.gitignore
@@ -28,3 +28,9 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Next PWA
+/public/workbox-*.js
+/public/workbox-*.js.map
+/public/sw.js
+/public/sw.js.map
