--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,7 @@
 
 # misc
 .DS_Store
+.notes
 
 # debug
 npm-debug.log*
@@ -28,6 +29,8 @@ yarn-error.log*
 .env.development.local
 .env.test.local
 .env.production.local
+
+# PWA
 public/sw.js
 public/sw.js.map
 public/workbox-*.js
